fix text size and spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,37 +3,41 @@
 @tailwind utilities;
 
 h1 {
-    @apply text-4xl py-8 font-semibold
+  @apply text-2xl md:text-4xl py-8 font-semibold;
 }
 
 h2 {
-    @apply text-3xl py-5 font-semibold
+  @apply text-3xl py-5 font-semibold;
 }
 
 h3 {
-    @apply text-2xl pt-8 pb-2 font-semibold
+  @apply text-2xl pt-8 pb-2 font-semibold;
 }
 
 p {
-    @apply py-2 tracking-wide leading-7
+  @apply py-2 text-base lg:text-lg tracking-wide leading-7 lg:leading-loose;
 }
 
 ul {
-    @apply list-disc ml-8 py-2
+  @apply list-disc ml-8 py-2;
 }
 
 ol {
-    @apply list-decimal ml-8 py-2
+  @apply list-decimal ml-8 py-2;
 }
 
 li {
-    @apply pb-1 tracking-wide leading-7
+  @apply pb-1 tracking-wide leading-7;
 }
 
 a {
-    @apply text-indigo-900 hover:text-indigo-700 font-bold
+  @apply text-indigo-900 hover:text-indigo-700 font-bold;
 }
 
 hr {
-    @apply border border-black mt-12
+  @apply border border-black mt-12;
+}
+
+img {
+  @apply my-2 lg:my-10;
 }
